--- a/furniro/src/App.css
+++ b/furniro/src/App.css
@@ -5,8 +5,8 @@
 }
 
 .container {
-  overflow: hidden;
   max-width: 1250px;
+  margin: 0 auto;
 }
 .row {
   display: flex;
@@ -53,7 +53,7 @@
   background: url("./assets/background.png") no-repeat;
   background-size: cover;
   background-position: center;
-  height: 90vh;
+  height: calc(100vh - 70px);
 }
 .discover {
   background-color: #fff3e3;
@@ -64,7 +64,8 @@
   width: 440px;
   border-radius: 10px;
   padding: 50px 40px 35px 37px;
-  margin-top: 90px;
+  top: 90px;
+  position: relative;
 }
 .discover h1 {
   color: #b88e2f;
@@ -361,6 +362,9 @@ h4 {
   box-shadow: 0 8px 10px rgba(0, 0, 0, 0.2);
 }
 /*SETUPSSSSSSSSS*/
+.container .setup {
+  overflow: hidden;
+}
 .setup {
   margin: 90px 0;
 }
@@ -508,13 +512,14 @@ h4 {
   font-weight: 600;
 }
 /*ShuffleProductsssssssss*/
-.filter {
+.filtro {
   background-color: #f9f1e7;
+  margin-bottom: 50px;
+}
+.filter {
   padding: 30px 15px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 50px;
   font-size: 15px;
 }
 .filter label input {
@@ -580,20 +585,22 @@ h4 {
 
 /*INFOSSSSSSS*/
 
-.infos .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.info {
   background-color: #f9f1e7;
   padding: 80px 10px;
   margin-top: 20px;
-  gap: 30px;
 }
-.infos h1 {
+.info .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.info h1 {
   font-size: 25px;
   margin: 0;
 }
-.infos p {
+.info p {
   margin: 0;
   font-size: 20px;
 }
@@ -693,7 +700,7 @@ h4 {
 }
 /*SHOPCARTTTTTTTTT*/
 .shopcart {
-  min-width: 1250px;
+  width: 1250px;
 }
 .shopcart h2 {
   background-color: #f9f1e7;
@@ -705,7 +712,6 @@ h4 {
   padding: 20px;
 }
 .shoprow {
-  max-width: 1250px;
   display: flex;
   flex-direction: row;
   margin: 0px 20px;
@@ -1101,8 +1107,8 @@ input[type="radio"] {
     display: none;
   }
   .discover {
-    width: 400px;
-
+    width: 90%;
+    margin: 0 auto;
     padding: 25px 20px 17px 18px;
   }
   .discover h1 {
@@ -1159,18 +1165,48 @@ input[type="radio"] {
   .filter {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 20px 0px;
+    font-size: 13px;
+  }
+  .filtro {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .card img {
     width: 100%;
   }
-  .infos .container {
+  .spanrow {
+    gap: 7px;
+    font-size: 4px;
+  }
+  .discount,
+  .isnew {
+    top: 14px;
+    right: 14px;
+  }
+  .tabela {
+    width: 100%;
+  }
+  .tabela .row2 {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .tabela .row2 p {
+    font-size: 13px;
+  }
+  .tabela .row2 p:nth-child(2) {
+    display: none;
+  }
+  .info {
+    padding: 40px 10px;
+  }
+  .info .container {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
   .info-item {
-    margin-bottom: 30px;
+    margin-bottom: 8px;
   }
   .info-item:last-child {
     margin-bottom: 0px;
@@ -1196,37 +1232,41 @@ input[type="radio"] {
   }
   .shoprow {
     flex-direction: column;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .shopcart {
+    max-width: 100vw;
+    padding: 0;
   }
   .row2:first-child {
     gap: 10px;
-
     padding-left: 115px;
-    padding-right: 10px;
+    padding-right: 40px;
   }
   .row2 p {
     font-size: 15px;
   }
-  .tabela,
   .bill,
   .check {
     width: 100%;
   }
-
   .countinue {
-    width: 100%;
+    width: 90%;
+    margin: 20px auto;
   }
   .billing {
     flex-direction: column;
     gap: 0px;
   }
-
   .check .row {
     flex-direction: row;
   }
   .check button {
     padding: 17px 30px;
   }
-
   .login div:first-child {
     padding: 20px 30px;
   }
@@ -1243,6 +1283,9 @@ input[type="radio"] {
     justify-content: center;
     align-items: center;
   }
+  .furniro ul li {
+    font-size: 14px;
+  }
   .descr p {
     margin: 20px;
   }
@@ -1250,6 +1293,7 @@ input[type="radio"] {
     display: block;
   }
 }
+
 /* ===========================
    HAMBURGER MENU 
 =========================== */
